added SecondActivity file

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         <activity android:name=".observer.MainActivity"/>
         <activity android:name=".viewbinding.ViewBindingActivity"/>
         <activity android:name=".databinding.activity.DataBindingActivity"/>
+        <activity android:name=".databinding.activity.SecondActivity"/>
     </application>
 
 </manifest>
